Tue Mar 10 04:53:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (MINIRUBY): keep macro into Makefile.

	* configure.in (RUBY_CHECK_SIZEOF): fix for fallback.

Tue Mar 10 03:48:27 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/callback/depend: fix for parallel build.

	* ext/dl/callback/extconf.rb: callback.h is no longer created.

	* ext/dl/callback/mkcallback.rb: creates main source first.

	* ext/dl/callback/extconf.rb ($distcleanfiles): added callback.c.

Tue Mar 10 00:06:21 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (load_relative): new option to enable load path
	  relative to libruby_so.

	* ruby.c (ruby_init_loadpath_safe): added the case using dladdr().

Mon Mar  9 16:49:13 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rake: updated to rake code to rake-0.8.4 source code base.

Mon Mar  9 16:03:37 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rubygems/installer.rb (Gem::Installer#initialize): env may
	  not be under /usr/bin.

	* lib/rubygems/installer.rb (Gem::Installer#shebang): uses /bin/sh
	  if shebang has any options, since env shebang trick does no
	  work with options.

Mon Mar  9 15:19:55 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* instruby.rb (manpages): use basename to compare and for Tempfile.

Mon Mar  9 14:55:27 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* instruby.rb (default gems): installs default gemspecs.

Mon Mar  9 14:48:08 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (OPTFLAGS): simplified. see [ruby-core:22725]

Mon Mar  9 14:33:57 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* instruby.rb: prints names of the directories where files are
	  installed to.

Mon Mar  9 02:25:54 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_proc.rb: add some tests.

Mon Mar  9 01:38:00 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_enum.rb: add some tests.

Mon Mar  9 01:12:37 2009  Yusuke Endoh  <mame@tsg.ne.jp>
